data/all_generated_tests/raw_wast_tests/nop_InfiniteLoops_279.wast
;; 10. Place `nop` in a loop where control flow is directed using labels and `br` instructions. Make sure `nop` does not affect label targeting and the loop maintains proper execution without entering an infinite loop.

(assert_invalid
  (module
    (func $test-loop
      (block $label1
        (loop $label2
          (nop)
          (br $label1)
        )
      )
    )
  )
  "malformed"
)